Forenkle mapping til AvstemEkspederteForsendelser
Co-authored-by: Anders Opskar Voldsund <anders.voldsund@nav.no>