@@ -2,14 +2,13 @@ package no.nav.dokdistavstemming;
 
 import no.nav.dokdistavstemming.consumer.journalpostapi.JournalpostResultResponse;
 import no.nav.dokdistavstemming.domain.AvstemEkspederteForsendelserRequest;
+import no.nav.dokdistavstemming.domain.EkspedertForsendelse;
 import no.nav.dokdistavstemming.domain.HentEkspederteForsendelserResponse;
 
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Set;
 
-import static java.lang.String.valueOf;
-import static org.apache.commons.lang3.StringUtils.isBlank;
+import static java.util.stream.Collectors.toUnmodifiableSet;
 
 public class AvstemEkspederteForsendelserMapper {
 
@@ -19,20 +18,18 @@ public class AvstemEkspederteForsendelserMapper {
 			return null;
 		}
 
-		List<AvstemEkspederteForsendelserRequest.Forsendelse> forsendelser = journalpostResultResponse.getOppdatert().stream()
-				.filter(Objects::nonNull)
-				.flatMap(jp -> ekspederteForsendelserResponse.getForsendelser().stream().filter(ekspedertForsendelse ->
-						isBlank(jp.getErrormessage()) &&
-						valueOf(jp.getJournalpostId()).equals(ekspedertForsendelse.getJournalpostId())))
-				.map(ekspederteForsendelse -> AvstemEkspederteForsendelserRequest.Forsendelse.builder()
-						.forsendelseId(ekspederteForsendelse.getForsendelseId())
-						.build()
-				)
-				.filter(Objects::nonNull)
-				.collect(Collectors.toList());
+		Set<Long> forsendelsesIderSomSkalOppdateres = journalpostResultResponse.getOppdatert().stream()
+				.flatMap(journalpost -> ekspederteForsendelserResponse.getForsendelser().stream()
+						.filter(ekspedertForsendelse -> ekspedertForsendelse.getJournalpostId().equals(journalpost.getJournalpostId().toString()))
+						.map(EkspedertForsendelse::getForsendelseId))
+				.collect(toUnmodifiableSet());
+
+		List<AvstemEkspederteForsendelserRequest.Forsendelse> forsendelseList = forsendelsesIderSomSkalOppdateres.stream()
+				.map(AvstemEkspederteForsendelserRequest.Forsendelse::new)
+				.toList();
 
 		return AvstemEkspederteForsendelserRequest.builder()
-				.forsendelser(forsendelser)
+				.forsendelser(forsendelseList)
 				.build();
 	}
 
